<resources>
    <string name="app_name">Crypto Watchlist</string>
    <string name="retry">Retry</string>
    <string name="no_coins_found">No coins found</string>
    <string name="search">Search</string>
    <string name="empty_percentage">0.0%</string>
    <string name="added_to_watchlist">%1$s added to watchlist</string>
    <string name="watchlist">Watchlist</string>

    <!-- Screen labels -->
    <string name="label_home_screen">Home</string>
    <string name="label_watchlist_screen">Watchlist</string>

    <!-- Screen titles -->
    <string name="title_watchlist_screen">Watchlist</string>

    <!-- Errors -->
    <string name="error_unknown">Something wrong happened. Please try again.</string>
</resources>